--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.8"
